# PetMask

./: .gitignore  README.md  main.py  pyproject.toml
src/: evalution.py  train.py
src/dataset/: dataset_load.py
src/losses/: loss.py
src/model/: model.py
src/models/: model.py
