[project]
name = "petmask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.136.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python-headless>=5.0.0.93",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "wandb>=0.27.0",
]
